@@ -10,6 +10,7 @@ lib/Monitoring/GLPlugin/DB/Item.pm
 lib/Monitoring/GLPlugin/DB/TableItem.pm
 lib/Monitoring/GLPlugin/Item.pm
 lib/Monitoring/GLPlugin/SNMP.pm
+lib/Monitoring/GLPlugin/SNMP/SysDescPrettyfy.pm
 lib/Monitoring/GLPlugin/SNMP/MibsAndOids.pm
 lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ADICINTELLIGENTSTORAGEMIB.pm
 lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ADICMANAGEMENTMIB.pm
