@@ -29,6 +29,8 @@ sub new {
   my ($class, %params) = @_;
   require Monitoring::GLPlugin
       if ! grep /BEGIN/, keys %Monitoring::GLPlugin::;
+  require Monitoring::GLPlugin::SNMP::SysDescPrettify
+      if ! grep /BEGIN/, keys %Monitoring::GLPlugin::SNMP::SysDescPrettify::;
   require Monitoring::GLPlugin::SNMP::MibsAndOids
       if ! grep /BEGIN/, keys %Monitoring::GLPlugin::SNMP::MibsAndOids::;
   require Monitoring::GLPlugin::SNMP::CSF
@@ -994,6 +996,16 @@ sub check_snmp_and_model {
 
 sub pretty_sysdesc {
   my ($self, $sysDesc) = @_;
+  foreach my $vendor (
+      keys %{$Monitoring::GLPlugin::SNMP::SysDescPrettyfy::vendor_rules}) {
+    if ($sysDesc =~ /$Monitoring::GLPlugin::SNMP::SysDescPrettyfy::vendor_rules->{$vendor}->{vendor_pattern}/) {
+      foreach my $func (@{$Monitoring::GLPlugin::SNMP::SysDescPrettyfy::vendor_rules->{$vendor}->{prettifier_funcs}}) {
+        if (my $pretty = $func->($sysDesc, $self->session())) {
+          return $pretty;
+        }
+      }
+    }
+  }
   return $sysDesc;
 }
 
