@@ -1,0 +1,12 @@
+package Monitoring::GLPlugin::SNMP::SysDescPrettyfy;
+our @ISA = qw(Monitoring::GLPlugin::SNMP);
+
+{
+  no warnings qw(once);
+  $Monitoring::GLPlugin::SNMP::SysDescPrettyfy::vendor_rules = {};
+}
+
+1;
+
+__END__
+
